--- a/index.html
+++ b/index.html
@@ -2,10 +2,68 @@
 <html lang="en">
 <head>
     <title>Document</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <!--<link rel="stylesheet" href="bootstrap.min.css">-->
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    
+    <div class='container'>
+        <div class='row'>
+            <div class='col-xs-12'>Full width section!!!</div>
+        </div>
+
+        <div class='row'>
+            <div class='col-xs-12 col-md-6'>
+                <div class='course'>
+                    <h4>Bootstrap Course!</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, cum. Quam suscipit tenetur dolores unde, praesentium quaerat esse dolor earum nihil excepturi! Alias officiis, cum eligendi ut recusandae tempore ipsa.</p>
+                </div>
+            </div>
+            <div class='col-xs-12 col-md-6'>
+                <div class='course'>
+                    <h4>Bootstrap Course!</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, cum. Quam suscipit tenetur dolores unde, praesentium quaerat esse dolor earum nihil excepturi! Alias officiis, cum eligendi ut recusandae tempore ipsa.</p>
+                </div>
+            </div>
+            <div class='col-xs-12 col-md-6'>
+                <div class='course'>
+                    <h4>Bootstrap Course!</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, cum. Quam suscipit tenetur dolores unde, praesentium quaerat esse dolor earum nihil excepturi! Alias officiis, cum eligendi ut recusandae tempore ipsa.</p>
+                </div>
+            </div>
+            <div class='col-xs-12 col-md-6'>
+                <div class='course'>
+                    <h4>Bootstrap Course!</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, cum. Quam suscipit tenetur dolores unde, praesentium quaerat esse dolor earum nihil excepturi! Alias officiis, cum eligendi ut recusandae tempore ipsa.</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
+                <form>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">Password</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputFile">File input</label>
+                        <input type="file" id="exampleInputFile">
+                        <p class="help-block">Example block-level help text here.</p>
+                    </div>
+                    <div class="checkbox">
+                        <label>
+                        <input type="checkbox"> Check me out
+                        </label>
+                    </div>
+                    <button type="submit" class="btn btn-default">Submit</button>
+                    </form>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
